Revision history for Perl extension Text-Markup.

0.15

0.14  2011-10-09T17:45:28Z
      - Added option processing to the Pod parser. Thanks to Mark Allen for
        the pull request.

0.13  2011-05-21T15:33:28
      - Fixed broken regular expression in the Pod parser that could eat the
        first line of a verbatim block.

0.12  2011-04-04T23:16:12
      - Documented that the `file` parameter to `parse()` is required.
      - Added MultiMarkdown support.
      - Fixed test failure in `t/formats.t` when no supported markup parser is
        installed.

0.11  2011-02-22T22:41:15
      - Added list of supported markups to the README.
      - Fixed test failures on Perls earlier than 5.12.

0.10  2011-02-22T19:45:27
      - Initial version. Includes parsers for:
        + HTML
        + Markdown
        + MediaWiki
        + Pod
        + Textile
        + Trac