@@ -12,6 +12,7 @@ sub parser {
     open_bom my $fh, $file, ":encoding($encoding)";
     local $/;
     my $html = Text::MediawikiFormat::format(<$fh>, @{ $opts || [] });
+    return unless $html =~ /\S/;
     utf8::encode($html);
     return qq{<html>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
