@@ -1,6 +1,8 @@
 Revision history for Perl extension Text-Markup.
 
 0.15
+      - Changed the parsers to return `undef` if no content was parsed from a
+        file.
 
 0.14  2011-10-09T17:45:28Z
       - Added option processing to the Pod parser. Thanks to Mark Allen for
